A little more cleanup