@@ -3,7 +3,6 @@ package org.veupathdb.service.eda.ds.plugin.pass;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,6 +25,7 @@ import org.veupathdb.service.eda.generated.model.VariableSpec;
 
 import static org.gusdb.fgputil.FormatUtil.NL;
 import static org.gusdb.fgputil.FormatUtil.TAB;
+import static org.veupathdb.service.eda.ds.metadata.AppsMetadata.CLINEPI_PROJECT;
 
 public class MapPlugin extends AbstractPlugin<MapPostRequest, MapSpec> {
 
@@ -41,7 +41,7 @@ public class MapPlugin extends AbstractPlugin<MapPostRequest, MapSpec> {
 
   @Override
   public List<String> getProjects() {
-    return Arrays.asList("ClinEpiDB");
+    return List.of(CLINEPI_PROJECT);
   }
   
   @Override
